# CoScan

./: LICENSE  README.md
co_scan/: package.xml
co_scan/include/LBFGS/: LBFGS.h
co_scan/include/se2/: se2.h
co_scan/src/: co_scan.cpp  data_engine.cpp  global.cpp  global.h  polygon_diff.cpp
co_scan/src/geodesic/: Chen_Han.h  EdgePoint.h  ExactDGPMethod.cpp  ExactDGPMethod.h  ICH_WindowFiltering.cpp  ICH_WindowFiltering.h  Parameters.h  Point3D.cpp  Xin_Wang.cpp  Xin_Wang.h
co_scan/src/tsp/: threads.cpp  twoOpt.cpp  twoOpt.h  usage.h
srbot_description/: CMakeLists.txt  package.xml
srbot_description/urdf/gazebo2/: srbot0.urdf  srbot1.urdf  srbot3.urdf  srbot4.urdf  srbot7.urdf  srbot8.urdf  srbot9.urdf
srbot_description/urdf/gazebo9/: srobot10.urdf  srobot13.urdf  srobot14.urdf  srobot16.urdf  srobot3.urdf  srobot4.urdf  srobot5.urdf  srobot6.urdf  srobot7.urdf  srobot9.urdf
src/co_scan/: CMakeLists.txt  package.xml
src/co_scan/include/LBFGS/: LineSearch.h  Param.h
src/co_scan/src/: co_scan.cpp  data_engine.h  distance.h  global.cpp  navigation.cpp  navigation.h  omt_solver.h  path_optimization.h
src/co_scan/src/geodesic/: BaseModel.cpp  BaseModel.h  Chen_Han.cpp  DistanceApproach.cpp  DistanceApproach.h  FacePoint.h  Point3D.h  RichModel.cpp  RichModel.h  VectorOperations.cpp  VectorOperations.h
src/co_scan/src/tsp/: MyThread.cpp  MyThread.h  threads.h  tsp.cpp  tsp.h
src/srbot_description/urdf/: test.urdf
src/srbot_description/urdf/gazebo2/: srbot.urdf  srbot2.urdf  srbot5.urdf  srbot6.urdf
src/srbot_description/urdf/gazebo9/: srobot.urdf  srobot.urdf.xacro  srobot0.urdf  srobot1.urdf  srobot11.urdf  srobot12.urdf  srobot15.urdf  srobot17.urdf  srobot18.urdf  srobot19.urdf  srobot2.urdf  srobot8.urdf
src/virtual_scan/launch/: scene.launch  simulator.launch  vscan_world.launch~  vscan_world_5.launch~  vscan_world_ten.launch~
src/virtual_scan/src/: init_locations.cpp  vscan_server.cpp
src/virtual_scan/worlds/: scene_with_robots.world
virtual_scan/: CMakeLists.txt  package.xml
virtual_scan/launch/: data_server.launch  rbt_10.launch  rbt_20.launch
virtual_scan/src/: vscan_server.cpp
